Fixed spacing issue on the footer

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: #EDE7D9;
+    margin-bottom: 40px;
 }
 
 main {
