--- a/styleaboutus.css
+++ b/styleaboutus.css
@@ -20,6 +20,13 @@
     grid-area: 2 / 2 / 3 / 3;
 }
 
+.team-image {
+    display: flex;
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+}
+
 @media screen and (min-width: 768px) {
     .team-container {
         display: flex;
